[package]
name = "stm32f303-rtfm-mems-example"
version = "0.1.0"
authors = ["Samuel Karlsson <samuel_karlsson@outlook.com>"]
edition = "2018"

[dependencies]
cortex-m-semihosting    = "0.3.5"
#panic-semihosting       = "0.5.3"
panic-halt 				= "0.2.0"
cortex-m                = "0.6.1"
f3 						= "0.6.1"
lsm303dlhc 				= "0.2.0"
aligned 				= "0.3.1"
madgwick				= "0.1.1"

[dependencies.stm32f3xx-hal]
version = "0.3.0"
features = ["rt", "stm32f303xc",]
git = "https://github.com/stm32-rs/stm32f3xx-hal.git"

[dependencies.cortex-m-rtfm]
version = "0.5.0"

[dependencies.l3gd20]
version = "0.2.0"
git = "https://github.com/bobgates/l3gd20"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.byteorder]
default-features = false
version = "1.2.1"
